# libRealSpace

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
doc/: PROG_OPCOD.md  gameflow_mission_map.mmd  hard_coded_midgame.md
macosx/libRealSpace.xcodeproj/: project.pbxproj
resources/: MID_1.IFF  MID_12.IFF  MID_14.IFF  MID_15.IFF  MID_17.IFF  MID_2.IFF  MID_20.IFF  MID_3.IFF  MID_36.IFF  MID_4.IFF  MID_5.IFF  config.ini  default_bindings.cfg  sc.rc
scripts/: gameflow_map.txt  mission_misn12A.txt  mission_misn12B.txt  mission_misn13B.txt  mission_misn14A.txt  mission_misn14B.txt  mission_misn5A.txt  mission_misn5B.txt  mission_misn5BB.txt  mission_misn5C.txt  mission_misn8A.txt  option_parsed.txt  pairs.txt  parse_effect_bytes.py  parse_gameflow.py  parse_iff.py  parse_overlay.py  ps_conv.txt  pstrike_miss0.txt  res.txt  test_crc32.py  test_ps_conv.py
src/: RSArea.cpp  RSArea.h  RSMission.cpp  RSMission.h  SCRenderer.cpp  precomp.h
src/commons/: ByteStream.cpp  ByteStream.h  CMakeLists.txt  IFFSaxLexer.cpp  IFFSaxLexer.h  IFFWriter.cpp  IFFWriter.h  LZBuffer.cpp  Math.cpp  Maths.h  Matrix.cpp  Matrix.h  PKWareDecompressor.cpp  PKWareDecompressor.h
src/commons/pklib/: CMakeLists.txt
src/engine/: CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.hpp  EventManager.cpp  EventManager.h  FrameBuffer.cpp  FrameBuffer.h  GLExtensions.cpp  GLExtensions.h  GameEngine.cpp  GameEngine.h  IActivity.cpp  IActivity.h  InputActionSystem.cpp  InputActionSystem.h  Loader.cpp  Loader.h  RSMixer.cpp  RSMixer.h  RSScreen.cpp  RSScreen.h  RSVGA.cpp  RSVGA.h  SCButton.cpp  SCButton.h  SCMouse.cpp  SCMouse.h  SCRenderer.cpp  SCRenderer.h  SCZone.cpp  SCZone.h  Texture.cpp  Texture.h  desktoptimer.h  gametimer.h  keyboard.cpp  keyboard.h  precomp.h  (+1 more)
src/executables/config/: CMakeLists.txt  main.cpp
src/executables/debugger/: CMakeLists.txt  DebugAnimationPlayer.cpp  DebugAnimationPlayer.h  DebugControlMapping.cpp  DebugControlMapping.h  DebugControllerActivity.cpp  DebugControllerActivity.h  DebugConvPlayer.cpp  DebugConvPlayer.h  DebugEmptyActivity.cpp  DebugEmptyActivity.h  DebugGame.cpp  DebugGame.h  DebugGameFlow.cpp  DebugGameFlow.h  DebugObjectViewer.cpp  DebugObjectViewer.h  DebugPSConvPlayer.cpp  DebugPSConvPlayer.h  DebugPSGameFlow.cpp  DebugPSGameFlow.h  DebugPacificStrikeMISN.cpp  DebugPacificStrikeMISN.h  DebugScreen.cpp  DebugScreen.h  DebugStrike.cpp  DebugStrike.h  DebugUtils.cpp  DebugUtils.h  main.cpp
src/executables/sc/: CMakeLists.txt  main.cpp
src/executables/to/: CMakeLists.txt
src/executables/vrstrike/: CMakeLists.txt  VRScreen.cpp  VRScreen.h  main.cpp  vrtimer.h
src/pacific_strike/: CMakeLists.txt  PSConvplayer.cpp  PSConvplayer.h  PSGameFlowParser.cpp  PSGameFlowParser.h  PSMission.cpp  PSMission.h  PSMissionParser.cpp  PSMissionParser.h  PSStrike.cpp  PSStrike.h
src/realspace/: AssetManager.cpp  AssetManager.h  ConvAssetManager.cpp  ConvAssetManager.h  PakArchive.cpp  PakArchive.h  RLEShape.cpp  RLEShape.h  RSArea.cpp  RSArea.h  RSCockpit.cpp  RSCockpit.h  RSEntity.cpp  RSEntity.h  RSFontManager.cpp  RSFontManager.h  RSGameflow.cpp  RSGameflow.h  RSHud.cpp  RSHud.h  RSImage.cpp  RSImage.h  RSImageSet.cpp  RSImageSet.h  RSMapTextureSet.cpp  RSMidgame.cpp  RSMidgame.h  RSMission.cpp  RSMission.h  RSMusic.cpp  RSMusic.h  RSNavMap.cpp  RSNavMap.h  RSObjviewer.cpp  RSObjviewer.h  RSOption.h  RSOptions.cpp  RSPalette.cpp  RSPalette.h  RSPlaque.cpp  (+11 more)
src/sc/: GameEngine.cpp  SCMission.cpp  SCPilot.cpp  SCPilot.h  SCPlane.h  SCStrike.cpp  SCStrike.h
src/strike_commander/: SCAnimationPlayer.cpp  SCAnimationPlayer.h  SCCockpit.cpp  SCCockpit.h  SCConvPlayer.cpp  SCConvPlayer.h  SCDogFightMenu.cpp  SCExplosion.h  SCFileRequester.cpp  SCFileRequester.h  SCGameFlow.cpp  SCGameFlow.h  SCJdynPlane.cpp  SCJdynPlane.h  SCMainMenu.cpp  SCMainMenu.h  SCMidGamesEnum.h  SCMission.cpp  SCMission.h  SCMissionActors.cpp  SCMissionActors.h  SCNavMap.cpp  SCNavMap.h  SCObjectViewer.cpp  SCPilot.cpp  SCPilot.h  SCPlane.cpp  SCPlane.h  SCProg.cpp  SCProg.h  SCRegister.cpp  SCRegister.h  SCScene.cpp  SCScene.h  SCShot.cpp  SCShot.h  SCSimplePlane.cpp  SCSimulatedObject.cpp  SCSimulatedObject.h  SCSmokeSet.cpp  (+11 more)
tests/: ByteStreamTests.cpp  CMakeLists.txt  IFFSaxLexerTests.cpp  MathTests.cpp  MatrixTests.cpp
