file (GLOB SC_SOURCE "*.cpp")
file (GLOB SC_HEADER "*.h")
if(WIN32)
    set(APP_ICON_RESOURCE "${CMAKE_SOURCE_DIR}/resources/debugger.rc")
endif()
add_executable (neoto ${SC_SOURCE} ${SC_HEADER} ${APP_ICON_RESOURCE})
set(TO_TARGET_NAME neoto PARENT_SCOPE)
target_include_directories(neoto PUBLIC ${SC_INCLUDES})
target_include_directories(neoto PUBLIC ${SDL2_INCLUDE_DIRS})
target_include_directories(neoto PUBLIC ${OPENGL_INCLUDE_DIR})
target_include_directories(neoto PUBLIC ${OPENGL_INCLUDE_DIR})
target_link_libraries(neoto PRIVATE engine realspace commons)
target_link_libraries(neoto PUBLIC ${SDL2_LIBRARIES})
target_link_libraries(neoto PRIVATE imgui::imgui )
target_link_libraries(neoto PUBLIC ${OPENGL_LIBRARIES})
